--- a/SportsSideKick/app/src/main/res/layout/popup_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_login.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginTop="24dp"
     android:background="@color/colorPrimaryMediumLight">
 
@@ -260,12 +261,18 @@
 
     </RelativeLayout>
 
+    <View
+        android:layout_height="24dp"
+        android:layout_width="match_parent"
+        android:id="@+id/topSpacer"
+        tools:visibility="gone"
+        android:background="@drawable/phone_background"/>
+
     <RelativeLayout
         android:id="@+id/top_buttons_container"
+        android:layout_below="@id/topSpacer"
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:background="@drawable/phone_background"
         android:orientation="horizontal">
 
