--- a/SportsSideKick/app/src/main/res/layout-large/fragment_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_profile.xml
@@ -137,8 +137,8 @@
                     android:layout_centerHorizontal="true"
                     android:background="@drawable/circle_shape"
                     android:indeterminate="false"
-                    android:max="@integer/progress_bar_max"
-                    android:progress="@integer/progress_bar_60"
+                    android:max="100"
+                    android:progress="60"
                     android:progressDrawable="@drawable/circular_progress_bar" />
 
                 <ImageView
@@ -390,8 +390,8 @@
                 android:layout_toStartOf="@+id/next_level_cointainer"
                 android:background="@drawable/circle_shape"
                 android:indeterminate="false"
-                android:max="@integer/progress_bar_max"
-                android:progress="@integer/progress_bar_60"
+                android:max="100"
+                android:progress="60"
                 android:progressDrawable="@drawable/linear_progress_bar" />
 
             <RelativeLayout
