--- a/SportsSideKick/app/src/main/res/layout-large/popup_member_info.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_member_info.xml
@@ -73,8 +73,8 @@
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/circle_shape"
                 android:indeterminate="false"
-                android:max="@integer/progress_bar_max"
-                android:progress="@integer/progress_bar_60"
+                android:max="100"
+                android:progress="60"
                 android:progressDrawable="@drawable/circular_progress_bar" />
 
             <ImageView
