--- a/SportsSideKick/app/src/main/res/layout/fragment_club_radio_station.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_club_radio_station.xml
@@ -112,7 +112,7 @@
             android:layout_centerVertical="true"
             android:layout_marginEnd="@dimen/margin_20"
             android:layout_toEndOf="@+id/mute_button"
-            android:progress="@integer/progress_bar_mid"
+            android:progress="50"
             android:progressDrawable="?seekBarAudioShape"
             android:thumb="@null"
             android:thumbOffset="@dimen/thumb_offset_0" />
@@ -128,7 +128,7 @@
         android:layout_alignStart="@+id/controls_container"
         android:layout_marginEnd="@dimen/margin_negative_18"
         android:layout_marginStart="@dimen/margin_negative_16"
-        android:progress="@integer/progress_bar_max"
+        android:progress="100"
         android:progressDrawable="?seekBarShape"
         android:thumb="@null"
         android:thumbOffset="@dimen/thumb_offset_0" />
