--- a/SportsSideKick/app/src/main/res/layout/fragment_video_player.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_video_player.xml
@@ -31,7 +31,7 @@
             android:layout_marginEnd="@dimen/margin_negative_18"
             android:layout_marginStart="@dimen/margin_negative_16"
             android:thumbOffset="@dimen/thumb_offset_0"
-            android:progress="@integer/progress_bar_60"
+            android:progress="60"
             android:progressDrawable="?seekBarShape" />
 
     </android.support.percent.PercentRelativeLayout>
