remove unused strings

--- a/SportsSideKick/app/src/main/res/layout/activity_main_tablet.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main_tablet.xml
@@ -364,7 +364,7 @@
                 android:button="@null"
                 android:gravity="center"
                 android:onClick="onRadioButtonClicked"
-                android:text="@string/news_caption"
+                android:text="@string/news"
                 android:textColor="?tabRadioButtonTextColor" />
 
             <RadioButton
