--- a/SportsSideKick/app/src/main/res/layout/next_match_view.xml
+++ b/SportsSideKick/app/src/main/res/layout/next_match_view.xml
@@ -41,32 +41,9 @@
             android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/margin_30"
             android:src="@drawable/club_logo"
-            app:layout_constraintBottom_toTopOf="@+id/label"
+            app:layout_constraintBottom_toTopOf="@id/label"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
-
-        <TextView
-            android:id="@+id/label_left"
-            style="@style/shadow_text_login"
-            fontPath="fonts/TitilliumWeb-SemiLight.ttf"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_below="@+id/club_logo"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/margin_30"
-            android:layout_marginEnd="@dimen/margin_8"
-            android:gravity="center"
-            android:text="@string/bringing"
-            android:textColor="@color/white"
-            app:autoSizeMaxTextSize="70sp"
-            app:autoSizeMinTextSize="20sp"
-            app:autoSizeStepGranularity="2sp"
-            app:autoSizeTextType="uniform"
-            app:layout_constraintBottom_toTopOf="@+id/nextMatchContainer"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/label"/>
+            app:layout_constraintRight_toRightOf="parent" />
 
         <TextView
             android:id="@+id/label"
@@ -77,41 +54,18 @@
             android:layout_below="@+id/club_logo"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/margin_30"
+            android:layout_marginBottom="32dp"
             android:gravity="center"
-            android:text="@string/fans"
-            android:textColor="@color/colorAccentSemiDark"
-            app:autoSizeMaxTextSize="70sp"
-            app:autoSizeMinTextSize="20sp"
-            app:autoSizeStepGranularity="2sp"
-            app:autoSizeTextType="uniform"
-            app:layout_constraintBottom_toTopOf="@+id/nextMatchContainer"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            tools:layout_editor_absoluteX="0dp"/>
-
-        <TextView
-            android:id="@+id/label_right"
-            style="@style/shadow_text_login"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_below="@+id/club_logo"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/margin_30"
-            android:layout_marginStart="@dimen/margin_8"
-            android:gravity="center"
-            android:text="@string/together"
+            android:text="@string/login_slider_text_1_phone"
             android:textColor="@color/white"
             app:autoSizeMaxTextSize="70sp"
             app:autoSizeMinTextSize="20sp"
             app:autoSizeStepGranularity="2sp"
             app:autoSizeTextType="uniform"
-            app:fontPath="fonts/TitilliumWeb-SemiLight.ttf"
             app:layout_constraintBottom_toTopOf="@+id/nextMatchContainer"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toRightOf="@+id/label"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <RelativeLayout
             android:id="@+id/nextMatchContainer"
@@ -137,7 +91,7 @@
                 android:layout_marginTop="@dimen/margin_20"
                 android:text="@string/next_match"
                 android:textColor="@color/white"
-                android:textSize="@dimen/font_size_16"/>
+                android:textSize="@dimen/font_size_16" />
 
             <RelativeLayout
                 android:id="@+id/teams_info"
@@ -165,14 +119,14 @@
                     app:autoSizeMaxTextSize="@dimen/font_size_28"
                     app:autoSizeMinTextSize="@dimen/font_size_20"
                     app:autoSizeStepGranularity="1sp"
-                    app:autoSizeTextType="uniform"/>
+                    app:autoSizeTextType="uniform" />
 
                 <ImageView
                     android:id="@+id/logoOfFirstTeam"
                     android:layout_width="@dimen/width_60"
                     android:layout_height="@dimen/height_60"
                     android:layout_centerVertical="true"
-                    android:layout_toEndOf="@+id/nameOfFirstTeam"/>
+                    android:layout_toEndOf="@+id/nameOfFirstTeam" />
 
                 <TextView
                     android:id="@+id/vs"
@@ -184,14 +138,14 @@
                     android:layout_toEndOf="@+id/logoOfFirstTeam"
                     android:text="@string/vs"
                     android:textColor="@color/colorAccentLight"
-                    android:textSize="@dimen/font_size_20"/>
+                    android:textSize="@dimen/font_size_20" />
 
                 <ImageView
                     android:id="@+id/logoOfSecondTeam"
                     android:layout_width="@dimen/width_60"
                     android:layout_height="@dimen/height_60"
                     android:layout_centerVertical="true"
-                    android:layout_toEndOf="@+id/vs"/>
+                    android:layout_toEndOf="@+id/vs" />
 
                 <!-- SECOND TEAM   -->
                 <TextView
@@ -211,7 +165,7 @@
                     app:autoSizeMaxTextSize="@dimen/font_size_28"
                     app:autoSizeMinTextSize="@dimen/font_size_20"
                     app:autoSizeStepGranularity="1sp"
-                    app:autoSizeTextType="uniform"/>
+                    app:autoSizeTextType="uniform" />
             </RelativeLayout>
 
             <TextView
@@ -223,7 +177,7 @@
                 android:layout_margin="@dimen/margin_10"
                 android:text=" Sun 14 Dec"
                 android:textColor="@color/white"
-                android:textSize="@dimen/font_size_18"/>
+                android:textSize="@dimen/font_size_18" />
 
             <TextView
                 android:id="@+id/countdown"
@@ -241,7 +195,7 @@
                 app:autoSizeMaxTextSize="160sp"
                 app:autoSizeMinTextSize="12sp"
                 app:autoSizeStepGranularity="1sp"
-                app:autoSizeTextType="uniform"/>
+                app:autoSizeTextType="uniform" />
 
         </RelativeLayout>
 
@@ -255,7 +209,7 @@
             android:src="@drawable/logo_fq"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
