simplify screen title strings

--- a/SportsSideKick/app/src/main/res/layout-large/popup_member_info.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_member_info.xml
@@ -157,7 +157,7 @@
         android:layout_alignTop="@+id/chat_button_image"
         android:layout_alignBottom="@+id/chat_button_image"
         android:gravity="center_vertical"
-        android:text="@string/chat_caption"
+        android:text="@string/chat"
         android:textColor="?memberInfoElementsTint"
         android:layout_toEndOf="@+id/chat_button_image" />
 
