--- a/SportsSideKick/app/src/main/res/layout-large/popup_create_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_create_chat.xml
@@ -41,7 +41,7 @@
                 android:layout_centerVertical="true"
                 android:gravity="center"
                 android:padding="@dimen/padding_8"
-                android:text="@string/chat_caption"
+                android:text="@string/chat"
                 android:textColor="?popupsCaptionColor" />
 
         </RelativeLayout>
