--- a/SportsSideKick/app/src/main/res/layout/activity_main_tablet.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main_tablet.xml
@@ -254,7 +254,7 @@
                 android:button="@null"
                 android:gravity="center"
                 android:onClick="onRadioButtonClicked"
-                android:text="@string/chat_caption"
+                android:text="@string/chat"
                 android:textColor="?tabRadioButtonTextColor" />
 
             <RadioButton
@@ -265,7 +265,7 @@
                 android:button="@null"
                 android:gravity="center"
                 android:onClick="onRadioButtonClicked"
-                android:text="@string/statistics_caption"
+                android:text="@string/stats"
                 android:textColor="?tabRadioButtonTextColor" />
 
             <RadioButton
@@ -276,7 +276,7 @@
                 android:button="@null"
                 android:gravity="center"
                 android:onClick="onRadioButtonClicked"
-                android:text="@string/fantasy_caption"
+                android:text="@string/fantasy"
                 android:textColor="?tabRadioButtonTextColor" />
 
 
@@ -288,7 +288,7 @@
                 android:button="@null"
                 android:gravity="center"
                 android:onClick="onRadioButtonClicked"
-                android:text="@string/quiz_caption"
+                android:text="@string/quiz"
                 android:textColor="?tabRadioButtonTextColor" />
         </RadioGroup>
 
@@ -310,7 +310,7 @@
                 android:button="@null"
                 android:gravity="center"
                 android:onClick="onRadioButtonClicked"
-                android:text="@string/club_tv_caption"
+                android:text="@string/tv"
                 android:textColor="?tabRadioButtonTextColor" />
 
             <RadioButton
@@ -321,7 +321,7 @@
                 android:button="@null"
                 android:gravity="center"
                 android:onClick="onRadioButtonClicked"
-                android:text="@string/club_radio_caption"
+                android:text="@string/radio"
                 android:textColor="?tabRadioButtonTextColor" />
         </RadioGroup>
 
@@ -342,7 +342,7 @@
                 android:button="@null"
                 android:gravity="center"
                 android:onClick="onRadioButtonClicked"
-                android:text="@string/wall_caption"
+                android:text="@string/wall"
                 android:textColor="?tabRadioButtonTextColor" />
 
             <RadioButton
@@ -353,7 +353,7 @@
                 android:button="@null"
                 android:gravity="center"
                 android:onClick="onRadioButtonClicked"
-                android:text="@string/video_chat_caption"
+                android:text="@string/video_chat"
                 android:textColor="?tabRadioButtonTextColor" />
 
             <RadioButton
@@ -375,7 +375,7 @@
                 android:button="@null"
                 android:gravity="center"
                 android:onClick="onRadioButtonClicked"
-                android:text="@string/rumours_caption"
+                android:text="@string/rumours"
                 android:textColor="?tabRadioButtonTextColor" />
 
             <RadioButton
@@ -386,7 +386,7 @@
                 android:button="@null"
                 android:gravity="center"
                 android:onClick="onRadioButtonClicked"
-                android:text="@string/shop_caption"
+                android:text="@string/shop"
                 android:textColor="?tabRadioButtonTextColor" />
         </RadioGroup>
 
