--- a/SportsSideKick/app/src/main/res/layout-large/fragment_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_profile.xml
@@ -256,7 +256,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_10"
                 android:layout_toEndOf="@+id/text_center"
-                android:text="@string/location_caption"
+                android:text="@string/location"
                 android:textColor="?colorAccent" />
 
             <TextView
@@ -274,7 +274,7 @@
                 android:layout_alignTop="@+id/subscribed_since_caption"
                 android:layout_below="@+id/location_value"
                 android:layout_toEndOf="@+id/text_center"
-                android:text="@string/password_caption"
+                android:text="@string/password"
                 android:textColor="?colorAccent" />
 
             <TextView
@@ -371,6 +371,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_negative_5"
                         android:gravity="center"
+                        android:textAllCaps="true"
                         android:text="@string/caps"
                         android:textColor="@color/white"
                         android:textSize="@dimen/font_size_10" />
