--- a/SportsSideKick/app/src/main/res/layout-large/fragment_video_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_video_chat.xml
@@ -20,7 +20,7 @@
             android:layout_toStartOf="@+id/toggle_mic_button"
             android:background="@null"
             android:src="@drawable/add_users_button"
-            android:text="@string/add_users" />
+            android:text="@string/chat_friends_add" />
 
         <ImageButton
             android:id="@+id/toggle_mic_button"
