--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -175,7 +175,7 @@
                 android:animateLayoutChanges="true"
                 android:background="@color/colorGrayLight"
                 android:gravity="start|center_vertical"
-                android:hint="@string/chat_hint"
+                android:hint="@string/message_hint"
                 android:imeActionId="@+id/action_send_message_id"
                 android:imeActionLabel="Send"
                 android:imeOptions="actionSend"
