--- a/SportsSideKick/app/src/main/res/layout/fragment_club_radio_station.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_club_radio_station.xml
@@ -84,6 +84,7 @@
             android:layout_centerVertical="true"
             android:layout_marginStart="@dimen/margin_10"
             android:layout_toEndOf="@+id/live_dot"
+            android:textAllCaps="true"
             android:text="@string/live"
             android:textColor="@color/white" />
 
