--- a/SportsSideKick/app/src/main/res/layout-large/popup_friend_requests.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_friend_requests.xml
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="@string/no_result"
+        android:text="@string/no_results"
         android:textColor="?white_semitransparent"
         android:visibility="gone" />
     <ImageView
