--- a/SportsSideKick/app/src/main/res/layout/include_input_field.xml
+++ b/SportsSideKick/app/src/main/res/layout/include_input_field.xml
@@ -42,7 +42,7 @@
             android:background="@null"
             android:layout_marginTop="@dimen/margin_5"
             android:layout_weight="1"
-            android:hint="@string/enter_comment_hint"
+            android:hint="@string/comment_hint"
             android:textColor="@color/black"
             android:textColorHint="@color/colorGrayDark"
             android:textSize="@dimen/font_size_12"/>
