--- a/SportsSideKick/app/src/main/res/layout/popup_friend_profile_fragment.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_friend_profile_fragment.xml
@@ -122,7 +122,7 @@
                 android:layout_below="@id/profile_image_container"
                 android:layout_marginTop="@dimen/margin_15"
                 android:gravity="center"
-                android:text="@string/login_sign_up_text"
+                android:text="@string/login_or_signup"
                 android:textColor="@color/white"
                 android:textSize="@dimen/font_size_16"
                 android:textStyle="bold" />
