--- a/SportsSideKick/app/src/main/res/layout-large/popup_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_signup.xml
@@ -188,7 +188,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerInParent="true"
-                                android:text="@string/join_now"
+                                android:text="@string/join"
                                 android:textColor="@android:color/black"
                                 android:textSize="@dimen/font_size_18" />
 
@@ -314,7 +314,7 @@
                 android:layout_centerInParent="true"
                 android:layout_marginEnd="1dp"
                 android:gravity="center_vertical"
-                android:text="@string/terms_and_privacy"
+                android:text="@string/terms"
                 android:textAllCaps="true"
                 android:textColor="?white"
                 android:textSize="@dimen/font_size_16"
