--- a/SportsSideKick/app/src/main/res/layout-large/popup_your_wallet.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_your_wallet.xml
@@ -123,6 +123,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:text="@string/you_have"
+                android:textAllCaps="true"
                 android:textColor="@color/white"
                 android:textSize="@dimen/font_size_10" />
 
@@ -165,6 +166,7 @@
                 android:paddingEnd="@dimen/margin_10"
                 android:paddingStart="@dimen/margin_10"
                 android:text="@string/bonus_gym_bag"
+                android:textAllCaps="true"
                 android:textSize="@dimen/font_size_10" />
         </RelativeLayout>
 
@@ -177,6 +179,7 @@
             android:layout_marginBottom="@dimen/margin_20"
             android:layout_marginTop="@dimen/margin_10"
             android:text="@string/bundles"
+            android:textAllCaps="true"
             android:textColor="?bundlesCaptionColorRef"
             android:textSize="@dimen/font_size_15"
             android:textStyle="bold" />
@@ -452,6 +455,7 @@
                 android:gravity="center"
                 android:padding="@dimen/half_margin"
                 android:paddingEnd="@dimen/margin_10"
+                android:textAllCaps="true"
                 android:paddingStart="@dimen/margin_10"
                 android:text="@string/bonus_gym_bag"
                 android:textSize="@dimen/font_size_10" />
