--- a/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
@@ -345,7 +345,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@color/transparent"
-                        android:text="@string/join_now"
+                        android:text="@string/join"
                         android:textAlignment="center"
                         android:textAllCaps="false"
                         android:textColor="@color/white"
@@ -365,7 +365,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@color/transparent"
-                        android:text="@string/login_login"
+                        android:text="@string/sign_in"
                         android:textAlignment="center"
                         android:textAllCaps="false"
                         android:textColor="@color/white"
