--- a/SportsSideKick/app/src/main/res/layout-large/popup_login_sing_up.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_login_sing_up.xml
@@ -44,7 +44,7 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="@dimen/margin_30"
                 android:layout_marginTop="@dimen/margin_30"
-                android:text="@string/login_slider_text_1_phone"
+                android:text="@string/slogan"
                 android:textAlignment="center"
                 android:textColor="?white"
                 android:textSize="@dimen/font_size_28" />
@@ -68,7 +68,7 @@
                     android:layout_height="@dimen/standard_button_height"
                     android:layout_weight="0.325"
                     android:background="@drawable/gym_bag_button_background"
-                    android:text="@string/join_now"
+                    android:text="@string/join"
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/black"
