--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -479,7 +479,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@color/transparent"
-                        android:text="@string/join_now"
+                        android:text="@string/join"
                         android:textAlignment="center"
                         android:textAllCaps="false"
                         android:textColor="@color/white"
@@ -499,7 +499,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@color/transparent"
-                        android:text="@string/login_login"
+                        android:text="@string/sign_in"
                         android:textAlignment="center"
                         android:textAllCaps="false"
                         android:textColor="@color/white"
