--- a/SportsSideKick/app/src/main/res/layout/next_match_view.xml
+++ b/SportsSideKick/app/src/main/res/layout/next_match_view.xml
@@ -56,7 +56,7 @@
             android:layout_gravity="center"
             android:layout_marginBottom="32dp"
             android:gravity="center"
-            android:text="@string/login_slider_text_1_phone"
+            android:text="@string/slogan"
             android:textColor="@color/white"
             app:autoSizeMaxTextSize="70sp"
             app:autoSizeMinTextSize="20sp"
