--- a/SportsSideKick/app/src/main/res/layout/popup_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_login.xml
@@ -100,7 +100,7 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="-8dp"
                     android:layout_marginBottom="24dp"
-                    android:text="@string/login_slider_text_1_phone"
+                    android:text="@string/slogan"
                     android:textColor="?popupsCaptionColor"
                     android:textSize="18sp" />
 
