--- a/SportsSideKick/app/src/main/res/layout/popup_your_wallet.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_wallet.xml
@@ -164,6 +164,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:text="@string/you_have"
+                        android:textAllCaps="true"
                         android:textColor="?popupsCaptionColor"
                         android:textSize="@dimen/font_size_10" />
 
@@ -206,6 +207,7 @@
                     android:layout_marginBottom="@dimen/margin_20"
                     android:layout_marginTop="@dimen/margin_10"
                     android:text="@string/bundles"
+                    android:textAllCaps="true"
                     android:textColor="?popupsCaptionColor"
                     android:textSize="@dimen/font_size_15"
                     android:textStyle="bold" />
@@ -285,6 +287,7 @@
                     android:layout_marginTop="@dimen/margin_5"
                     android:background="@drawable/gym_bag_button_background"
                     android:gravity="center"
+                    android:textAllCaps="true"
                     android:padding="@dimen/padding_3"
                     android:paddingEnd="@dimen/margin_30"
                     android:paddingStart="@dimen/margin_10"
